@@ -28,8 +28,8 @@ import javax.sql.DataSource;
 
 import org.apache.cayenne.access.DataDomain;
 import org.apache.cayenne.configuration.Constants;
+import org.apache.cayenne.datasource.DataSourceBuilder;
 import org.apache.cayenne.di.Binder;
-import org.apache.cayenne.di.MapBuilder;
 import org.apache.cayenne.di.Module;
 
 /**
@@ -47,18 +47,11 @@ public class ServerRuntimeBuilder {
 	private Collection<String> configs;
 	private List<Module> modules;
 	private DataSourceFactory dataSourceFactory;
-	private String jdbcUrl;
-	private String jdbcDriver;
-	private String jdbcUser;
-	private String jdbcPassword;
-	private int jdbcMinConnections;
-	private int jdbcMaxConnections;
-	private String validationQuery;
-	
+
 	public static ServerRuntimeBuilder builder() {
 		return new ServerRuntimeBuilder();
 	}
-	
+
 	public static ServerRuntimeBuilder builder(String name) {
 		return new ServerRuntimeBuilder(name);
 	}
@@ -86,6 +79,8 @@ public class ServerRuntimeBuilder {
 	 * mapping. Moreover if the mapping contains no DataNodes, and the
 	 * DataSource is set with this method, the builder would create a single
 	 * default DataNode.
+	 * 
+	 * @see DataSourceBuilder
 	 */
 	public ServerRuntimeBuilder dataSource(DataSource dataSource) {
 		this.dataSourceFactory = new FixedDataSourceFactory(dataSource);
@@ -97,61 +92,6 @@ public class ServerRuntimeBuilder {
 	 */
 	public ServerRuntimeBuilder jndiDataSource(String location) {
 		this.dataSourceFactory = new FixedJNDIDataSourceFactory(location);
-		return this;
-	}
-
-	/**
-	 * Sets a database URL for the default DataSource.
-	 */
-	public ServerRuntimeBuilder url(String url) {
-		this.jdbcUrl = url;
-		return this;
-	}
-
-	/**
-	 * Sets a driver Java class for the default DataSource.
-	 */
-	public ServerRuntimeBuilder jdbcDriver(String driver) {
-		// TODO: guess the driver from URL
-		this.jdbcDriver = driver;
-		return this;
-	}
-
-	/**
-	 * Sets a validation query for the default DataSource.
-	 * 
-	 * @param validationQuery
-	 *            a SQL string that returns some result. It will be used to
-	 *            validate connections in the pool.
-	 */
-	public ServerRuntimeBuilder validationQuery(String validationQuery) {
-		this.validationQuery = validationQuery;
-		return this;
-	}
-
-	/**
-	 * Sets a user name for the default DataSource.
-	 */
-	public ServerRuntimeBuilder user(String user) {
-		this.jdbcUser = user;
-		return this;
-	}
-
-	/**
-	 * Sets a password for the default DataSource.
-	 */
-	public ServerRuntimeBuilder password(String password) {
-		this.jdbcPassword = password;
-		return this;
-	}
-
-	public ServerRuntimeBuilder minConnections(int minConnections) {
-		this.jdbcMinConnections = minConnections;
-		return this;
-	}
-
-	public ServerRuntimeBuilder maxConnections(int maxConnections) {
-		this.jdbcMaxConnections = maxConnections;
 		return this;
 	}
 
@@ -225,39 +165,6 @@ public class ServerRuntimeBuilder {
 				}
 			});
 
-		}
-		// URL and driver are the minimal requirement for
-		// DelegatingDataSourceFactory to work
-		else if (jdbcUrl != null && jdbcDriver != null) {
-			prepend(new Module() {
-				@Override
-				public void configure(Binder binder) {
-					binder.bind(DataDomain.class).toProvider(SyntheticNodeDataDomainProvider.class);
-					MapBuilder<Object> props = binder.bindMap(Constants.PROPERTIES_MAP)
-							.put(Constants.JDBC_DRIVER_PROPERTY, jdbcDriver).put(Constants.JDBC_URL_PROPERTY, jdbcUrl);
-
-					if (jdbcUser != null) {
-						props.put(Constants.JDBC_USERNAME_PROPERTY, jdbcUser);
-					}
-
-					if (jdbcPassword != null) {
-						props.put(Constants.JDBC_PASSWORD_PROPERTY, jdbcPassword);
-					}
-
-					if (jdbcMinConnections > 0) {
-						props.put(Constants.JDBC_MIN_CONNECTIONS_PROPERTY, Integer.toString(jdbcMinConnections));
-					}
-
-					if (jdbcMaxConnections > 0) {
-						props.put(Constants.JDBC_MAX_CONNECTIONS_PROPERTY, Integer.toString(jdbcMaxConnections));
-					}
-
-					if (validationQuery != null) {
-						props.put(Constants.JDBC_VALIDATION_QUERY_PROPERTY, validationQuery);
-					}
-
-				}
-			});
 		}
 	}
 
