@@ -18,6 +18,14 @@
  ****************************************************************/
 package org.apache.cayenne.configuration.server;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertSame;
+
+import java.util.List;
+
+import javax.sql.DataSource;
+
 import org.apache.cayenne.DataRow;
 import org.apache.cayenne.access.DataNode;
 import org.apache.cayenne.conn.DataSourceInfo;
@@ -32,14 +40,6 @@ import org.apache.cayenne.unit.di.server.UseServerRuntime;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-
-import javax.sql.DataSource;
-
-import java.util.List;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertSame;
 
 @UseServerRuntime(CayenneProjects.TESTMAP_PROJECT)
 public class ServerRuntimeBuilderIT extends ServerCase {
@@ -87,37 +87,10 @@ public class ServerRuntimeBuilderIT extends ServerCase {
 	}
 
 	@Test
-	public void testConfigFree_WithDBParams() {
-
-		localRuntime = new ServerRuntimeBuilder().jdbcDriver(dsi.getJdbcDriver()).url(dsi.getDataSourceUrl())
-				.password(dsi.getPassword()).user(dsi.getUserName()).minConnections(1).maxConnections(2).build();
-
-		List<DataRow> result = SQLSelect.dataRowQuery("SELECT * FROM ARTIST").select(localRuntime.newContext());
-		assertEquals(2, result.size());
-	}
-
-	@Test
 	public void testNoNodeConfig_WithDataSource() {
 
 		localRuntime = new ServerRuntimeBuilder().addConfig(CayenneProjects.TESTMAP_PROJECT).dataSource(dataSource)
 				.build();
-
-		DataMap map = localRuntime.getDataDomain().getDataMap("testmap");
-		assertNotNull(map);
-
-		DataNode node = localRuntime.getDataDomain().getDefaultNode();
-		assertNotNull(node);
-		assertEquals(1, node.getDataMaps().size());
-
-		assertSame(map, node.getDataMap("testmap"));
-	}
-
-	@Test
-	public void testNoNodeConfig_WithDBParams() {
-
-		localRuntime = new ServerRuntimeBuilder().addConfig(CayenneProjects.TESTMAP_PROJECT)
-				.jdbcDriver(dsi.getJdbcDriver()).url(dsi.getDataSourceUrl()).password(dsi.getPassword())
-				.user(dsi.getUserName()).minConnections(1).maxConnections(2).build();
 
 		DataMap map = localRuntime.getDataDomain().getDataMap("testmap");
 		assertNotNull(map);
