@@ -22,6 +22,7 @@ CAY-2004 EJBQL: Support for ordering on aggregate expressions
 CAY-2007 Refactoring SelectTranslator for better extensibility
 CAY-2008 Connection pool refactoring and validation query support in Cayenne DataSource
 CAY-2009 Non-blocking connection pool
+CAY-2010 Splitting DataSourceBuilder from ServerRuntimeBuilder
 
 Bug Fixes:
 
